Přidání barev a tlačítka

--- a/index.html
+++ b/index.html
@@ -65,10 +65,14 @@
         <div class="choose-colors">
           <div class="color-option">
             <div class="color-option__box"></div>
-            <p class="color-option__name">bílá</p>
+            <p class="color-option__name--white">bílá</p>
+            <p class="color-option__name--black">černá</p>
+            <p class="color-option__name--red">červená</p>
+            <p class="color-option__name--sky-blue">nebesky modrá</p>
           </div>
         </div>
       </div>
+      <button class="btn-order">Objednat</button>
     </div>
   </body>
 </html>
