--- a/index.html
+++ b/index.html
@@ -65,9 +65,13 @@
         <div class="choose-colors">
           <div class="color-option">
             <div class="color-option__box"></div>
+            <button class="btn-white"></button>
             <p class="color-option__name--white">bílá</p>
+            <button class="btn-black"></button>
             <p class="color-option__name--black">černá</p>
+            <button class="btn-red"></button>
             <p class="color-option__name--red">červená</p>
+            <button class="btn-sky-blue"></button>
             <p class="color-option__name--sky-blue">nebesky modrá</p>
           </div>
         </div>
